<resources>
    <string name="app_name">HomeServicesAdmin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="welcomeBack">Welcome Back</string>
    <string name="enterDetailsBelow">Enter your details below</string>
    <string name="enter_name">Enter name</string>
    <string name="enterUserNameEmail">Enter username/email</string>
    <string name="enterPassword">Enter password</string>
    <string name="forgetPassword">forget password?</string>
    <string name="signIn">sign In</string>
    <string name="welcomeAdmin">Welcome Admin</string>
    <string name="adminId">Admin ID</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hey">Hey! Natasha</string>
    <string name="goodMorning">Good morning! Have a good day.</string>
    <string name="searchMaid">Search maid</string>
    <string name="maidName">Sophia</string>
    <string name="maidAge">Age: 25</string>
    <string name="perMonth">per month</string>
    <string name="maidSalaryDemand">RS 55000</string>
    <string name="nav_header_text">Menu</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="how_it_works">How it works</string>
    <string name="about_us">About Us</string>
    <string name="help">Help</string>
    <string name="working">Working</string>
    <string name="currentMaid">Current maid</string>
    <string name="currentMaidName">Sophia is your current maid.</string>
    <string name="maidDetails">Below are the details.</string>
    <string name="rating">Rating</string>
    <string name="location">Location:</string>
    <string name="availability">Availability</string>
    <string name="placeName">Sargodha</string>
    <string name="halfTime">Half-time</string>
    <string name="service">Services</string>
    <string name="servicesName">Washing, Cleaning, Toilets</string>
    <string name="experience">Experience</string>
    <string name="enterExperienceInYears">Enter experience in years!</string>
    <string name="experienceYears">5 Years</string>
    <string name="cancelEmployment">Cancel Employment</string>
    <string name="pastMaid">Past Maids</string>
    <string name="maidAppointed">Maid appointed</string>
    <string name="date">April 26</string>
    <string name="buyerRequest">Buyer request</string>
    <string name="addMaid">Add Maid</string>
    <string name="activeMaid">Active Maid</string>
    <string name="helloAdmin">Hello! Admin</string>
    <string name="AddMaid">Add Maid</string>
    <string name="enterMaidDetails">Enter Maid Details</string>
    <string name="enterMaidName">Enter maid name</string>
    <string name="enterPhone">Enter phone</string>
    <string name="enterPhoneNo">Enter phone no</string>
    <string name="phone_num_not_valid">PhoneNumber is not valid!</string>
    <string name="enterCNIC">Enter CNIC</string>
    <string name="enterCNICNo">Enter CNIC No</string>
    <string name="enterAge">Enter age</string>
    <string name="enterAgeInNumber">Enter age in numbers</string>
    <string name="priceRange">Price range</string>
    <string name="enterPrice">Enter price</string>
    <string name="years">Years</string>
    <string name="ares">Area</string>
    <string name="enterArea">Enter area</string>
    <string name="fullTime">Full time</string>
    <string name="cleaning">Cleaning</string>
    <string name="henry">Henry</string>
    <string name="locationSample">Sargodha Road</string>
    <string name="availabilityNeed">Availability Needed</string>
    <string name="maidRequested">Maid Requested</string>
    <string name="approve">Approve</string>
    <string name="decline">Decline</string>
    <string name="clothes">Clothes</string>
    <string name="toilets">Toilets</string>
    <string name="clothesPressing">Clothes Pressing</string>
    <string name="babyCare">Baby care</string>
    <string name="selectOneAvailability">Select one Availability Time</string>
    <string name="selectOneService">Select one Service Must</string>
</resources>