<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:background="@drawable/bg_edittext_round">

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppinsmedium"
        android:maxWidth="270dp"
        android:maxHeight="50dp"
        android:text="@string/henry"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/location"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@id/userNameTextView"
        app:layout_constraintTop_toBottomOf="@id/userNameTextView" />

    <TextView
        android:id="@+id/locationPlaceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/locationSample"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@id/locationTextView"
        app:layout_constraintTop_toTopOf="@id/locationTextView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/maidCircleImageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="250dp"
        app:layout_constraintBottom_toBottomOf="@id/locationTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/userNameTextView">

        <androidx.cardview.widget.CardView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            app:cardCornerRadius="250dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/image1" />

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:visibility="invisible"
        android:id="@+id/addressLocationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/location"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@id/userNameTextView"
        app:layout_constraintTop_toBottomOf="@id/locationTextView" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/addressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/location"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@id/maidCircleImageView"
        app:layout_constraintTop_toTopOf="@id/addressLocationTextView" />

    <TextView
        android:id="@+id/availabilityNeededTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/availabilityNeed"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@id/userNameTextView"
        app:layout_constraintTop_toBottomOf="@id/addressLocationTextView" />

    <TextView
        android:id="@+id/availabilityNeededValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/location"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@id/maidCircleImageView"
        app:layout_constraintTop_toTopOf="@id/availabilityNeededTextView" />

    <TextView
        android:id="@+id/maidRequestedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/maidRequested"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@id/userNameTextView"
        app:layout_constraintTop_toBottomOf="@id/availabilityNeededTextView" />

    <TextView
        android:id="@+id/maidRequestedNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/henry"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@id/maidCircleImageView"
        app:layout_constraintTop_toTopOf="@id/maidRequestedTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/approveButton"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/approve_btn_bg_round"
        android:paddingHorizontal="30dp"
        android:text="@string/approve"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/declineButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/maidRequestedTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/declineButton"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/decline_btn_round"
        android:paddingHorizontal="30dp"
        android:text="@string/decline"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/approveButton"
        app:layout_constraintTop_toTopOf="@id/approveButton" />

</androidx.constraintlayout.widget.ConstraintLayout>